kubernetes/apps/ai/stable-diffusion/comfyui/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: comfyui
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.haynesops
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`comfyui.haynesops.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: comfyui
          port: 8188
  tls:
    secretName: certificate-haynesops
